# p2p-handshake

./: .pre-commit-config.yaml  ADR.md  Cargo.toml  README.md  workflow-dev.toml
src/: lib.rs  main.rs  p2p.rs  telemetry.rs
src/p2p/: btc.rs  commands.rs  config.rs  error.rs  eth.rs
src/p2p/btc/: codec.rs  stream.rs
src/p2p/eth/: constants.rs  stream.rs  utils.rs
tests/: test_btc_handshake.rs  test_eth_handshake.rs
